<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fleetItem"
            type="com.android.example.fleetioassessment.data.Vehicle" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="10dp"
        android:clickable="true"
        android:layout_marginBottom="8dp"
        app:cardPreventCornerOverlap="true"
        android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageCover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:imageUrl="@{fleetItem.thumbnailUrl}"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.3"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:id="@+id/vehicleNameLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/main_fragment_name_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                app:text="@{fleetItem.name}" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vehicleMakeLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/vehicleNameLL"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleMakeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/main_fragment_make_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleMakeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                app:text="@{fleetItem.make}" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/vehicleModelLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintLeft_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/vehicleMakeLL"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleModelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/main_fragment_model_label" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/vehicleModelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                app:text="@{fleetItem.model}" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>